--- a/index.html
+++ b/index.html
@@ -2,29 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Watchlist</title>
+    <title>Movie Tracker</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>🎬 Movie Watchlist</h1>
+    <h1>Movie Tracker</h1>
 
-      <form id="movieForm">
-        <input type="text" id="title" placeholder="Movie Title" required />
-        <input type="text" id="genre" placeholder="Genre" required />
-        <input type="number" id="year" placeholder="Release Year" required />
-        <button type="submit">Add Movie</button>
-      </form>
+    <form id="add-movie-form">
+      <input type="text" id="title" placeholder="Movie Title" required />
+      <input type="text" id="genre" placeholder="Genre" required />
+      <input type="text" id="year" placeholder="Year" required />
+      <button type="submit">Add Movie</button>
+    </form>
 
-      <input type="text" id="search" placeholder="Search movies..." />
+    <input type="text" id="search" placeholder="Search movies..." />
 
-      <h2>📺 Movies To Watch</h2>
-      <ul id="toWatchList"></ul>
+    <h2>To Watch</h2>
+    <ul id="to-watch-list"></ul>
 
-      <h2>✅ Watched Movies</h2>
-      <ul id="watchedList"></ul>
-    </div>
+    <h2>Watched</h2>
+    <ul id="watched-list"></ul>
 
     <script src="script.js"></script>
   </body>
